--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
         "bower_components"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#^0.5.1"
+        "polymer": "Polymer/polymer#^0.5.1",
+        "lodash": "~2.4.1"
     }
 }
